1.6 (unreleased)
----------------

- :meth:`atomx.Atomx.login` takes ``totp`` parameter for users that have 2-factor auth enabled.
- :meth:`atomx.Atomx.search` takes ``index`` parameter to only search specific models.
- Add support to remove models from the API. See :meth:`atomx.models.AtomxModel.delete`.
- Add :meth:`atomx.Atomx.remove`.

1.5
---

- :meth:`atomx.Atomx.report` takes ``name`` parameter to name reports
- remove ``network`` scope in :meth:`atomx.Atomx.report` and add
  ``network_managed``, ``network_buy``, ``network_sell``
- Add new models:

  * :class:`atomx.models.AccountManager` (alias for `User`)
  * :class:`atomx.models.CampaignDebugReason`
  * :class:`atomx.models.CreativeAttribute`
  * :class:`atomx.models.PlacementType`
  * :class:`atomx.models.Visibility`

- Add :meth:`atomx.models.Report.save` to edit ``name`` and ``emails``
  of a :class:`atomx.models.Report`
- :meth:`atomx.Atomx.get` also accepts a model class or instance as resource argument.
  E.g.: ``atomx_api.get(atomx.models.Advertiser)`` or ``atomx_api.get(atomx.models.Advertiser(42))``
- Add :mod:`pickle` support for :mod:`atomx.models`.
- Save HTTP headers in :attr:`atomx.Atomx.last_response`.
- Add history support. :meth:`atomx.models.AtomxModel.history`.
- Use api version 3::

  * Fast reporting. No more polling if reports are ready.
  * Use authentication token in HTTP header instead of cookies.
  * Model and attribute changes


1.4
---

- Change default API version to `v2`
- If :meth:`atomx.Atomx.post` returns a list, auto-convert list of objects
  to a list of :mod:`atomx.models` models. (Useful for `POST` to the `/domains` endpoint)
- Add :class:`atomx.models.ScheduledReport`
- :meth:`atomx.Atomx.report` accepts ``when`` and ``interval`` to create a
  :class:`atomx.models.ScheduledReport`


1.3
---

- Add :meth:`atomx.Atomx.delete` to send a ``HTTP DELETE`` request to the api
- :meth:`atomx.Atomx.get` and :meth:`atomx.Atomx.delete` accept non-keyword arguments